--- a/antarctica/antarctica.html
+++ b/antarctica/antarctica.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Africa Information">
+    <meta name="description" content="Antarctica Information">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Austin Medina, Lauren Goodrich, Enka Hysaj, Maddie Carlson">>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>North America</title>
+    <title>Africa</title>
     <style>
         
     </style>
@@ -23,7 +23,7 @@
         <a href="antarctica.html">Antarctica</a>
     </nav>
     <div class="content">
-        <h1>North America</h1>
+        <h1>Antarctica</h1>
     </div>
 </body>
 </html>
