--- a/southAmerica/southAmerica.html
+++ b/southAmerica/southAmerica.html
@@ -24,6 +24,12 @@
     </nav>
     <div class="content">
         <h1>South America</h1>
+        
+        <div class="quiz">
+            <form>
+                <label for="question1">Question 1</label>
+            </form>
+        </div>
     </div>
 </body>
 </html>
