ecology sections all done, formatting needed

--- a/oceania/oceania.html
+++ b/oceania/oceania.html
@@ -7,23 +7,59 @@
     <meta name="author" content="Austin Medina, Lauren Goodrich, Enka Hysaj, Maddie Carlson">>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oceania</title>
-    <style>
-        
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <script src="oceania.js" defer></script>
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="north-america.html">North America</a>
-        <a href="south-america.html">South America</a>
-        <a href="oceania.html">Oceania</a>
-        <a href="asia.html">Asia</a>
-        <a href="africa.html">Africa</a>
-        <a href="europe.html">Europe</a>
-        <a href="antarctica.html">Antarctica</a>
+        <a href="../home.html">Home</a>
+        <a href="../northAmerica/northAmerica.html">North America</a>
+        <a href="../southAmerica/southAmerica.html">South America</a>
+        <a href="../oceania/oceania.html">Oceania</a>
+        <a href="../asia/asia.html">Asia</a>
+        <a href="../africa/africa.html">Africa</a>
+        <a href="../europe/europe.html">Europe</a>
+        <a href="../antarctica/antarctica.html">Antarctica</a>
     </nav>
     <div class="content">
         <h1>Oceania</h1>
+
+        <section id="ecology">
+            <h2>Biodiversity</h2>
+                <p>Australia is a land of extraordinary biodiversity, home to species and ecosystems 
+                    found nowhere else on Earth. Its wildlife includes iconic marsupials like kangaroos, 
+                    koalas, and wombats, each adapted to thrive in the continent's unique environments. 
+                    The flora is equally distinct, with eucalyptus trees dominating much of the landscape 
+                    and spinifex grasses defining arid regions. Australia's marine life is just as 
+                    remarkable, with coral reefs such as the Great Barrier Reef hosting a dazzling 
+                    array of fish, mollusks, and other marine organisms.</p>
+
+            <h2>Ecosystems</h2>
+                <p>The continent's major ecosystems are as diverse as its wildlife. The vast Outback, 
+                    with its arid deserts and rugged terrain, supports hardy species like emus, dingoes, 
+                    and desert-adapted plants. In the tropical rainforests of Queensland, lush vegetation 
+                    provides habitats for species like the cassowary and tree kangaroo. Australia's 
+                    marine ecosystems, particularly around the Great Barrier Reef, are vital to global 
+                    biodiversity, supporting over 1,500 species of fish and thousands of coral species.</p>
+
+                    <p>Click the image below to reveal a fun fact:</p>
+                <div class="image-container">
+                    <img src="dingo.jpg" alt="Great Barrier Reef" class="clickable-image">
+                    <p class="fun-fact" style="display: none;">Even though dingoes inhabit arid deserts of Australia, they are excellent swimmers, and have been known to swim out to small islands in search of food.</p>
+                </div>
+
+            <h2>Conservation</h2>
+                <p>Conservation in Australia faces significant challenges, particularly with the 
+                    introduction of invasive species like rabbits and foxes, which disrupt native 
+                    ecosystems. Coral bleaching, a result of rising sea temperatures, poses a major 
+                    threat to the Great Barrier Reef, one of the most important marine habitats 
+                    on the planet.</p>
+                    
+                <p>Conservation efforts include wildlife management programs, invasive species 
+                    control, and initiatives to address climate change impacts, ensuring that 
+                    Australia's unique ecological treasures are preserved for future generations.</p>
+
+        </section>
     </div>
 </body>
 </html>
