--- a/asia/asia.html
+++ b/asia/asia.html
@@ -7,23 +7,65 @@
     <meta name="author" content="Austin Medina, Lauren Goodrich, Enka Hysaj, Maddie Carlson">>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asia</title>
-    <style>
-        
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <script src="asiaQuiz.js" defer></script>
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="north-america.html">North America</a>
-        <a href="south-america.html">South America</a>
-        <a href="oceania.html">Oceania</a>
-        <a href="asia.html">Asia</a>
-        <a href="africa.html">Africa</a>
-        <a href="europe.html">Europe</a>
-        <a href="antarctica.html">Antarctica</a>
+        <a href="../home.html">Home</a>
+        <a href="../northAmerica/northAmerica.html">North America</a>
+        <a href="../southAmerica/southAmerica.html">South America</a>
+        <a href="../oceania/oceania.html">Oceania</a>
+        <a href="../asia/asia.html">Asia</a>
+        <a href="../africa/africa.html">Africa</a>
+        <a href="../europe/europe.html">Europe</a>
+        <a href="../antarctica/antarctica.html">Antarctica</a>
     </nav>
     <div class="content">
         <h1>Asia</h1>
+
+        <section id="ecology">
+            <h2>Biodiversity</h2>
+                <p>Asia is the largest continent on Earth, boasting an incredible diversity of 
+                    ecosystems and species. Its vast size allows for the greatest range of climates, 
+                    from the icy tundras of Siberia to the steamy tropical forests of Southeast Asia.</p>
+
+                <p>Asia is home to some of the world's most iconic animals, such as tigers, pandas, 
+                    snow leopards, and Asian elephants. These species are not only emblematic of the 
+                    continent but are also integral to their ecosystems. Asia's plant life is equally 
+                    diverse, with delicate cherry blossoms painting the landscapes of Japan in spring 
+                    and vast bamboo forests providing crucial habitats for animals like the giant panda</p>
+
+            <h2>Ecosystems</h2>
+                <p>The continent's major ecosystems are as varied as its landscapes. In the north, 
+                    the Siberian tundra and boreal forests stretch for thousands of miles, dominated 
+                    by hardy conifers and supporting species like reindeer and wolves.</p>
+                    
+                <p>In the tropical regions of Southeast Asia, lush rainforests teem with life, from 
+                    colorful birds and reptiles to rare primates like orangutans. Meanwhile, the 
+                    towering Himalayas, the world's highest mountain range, host unique high-altitude 
+                    cosystems. These support species such as the snow leopard and yaks, along with a 
+                    variety of alpine plants that have adapted to the thin air and cold temperatures.</p>
+
+            <h2>Conservation</h2>
+                <p>Conservation efforts across Asia are critical due to the continent's growing 
+                    urbanization and agricultural expansion, which lead to significant habitat loss. 
+                    Tigers, once widespread across Asia, now face extinction in many regions, prompting 
+                    focused conservation projects like tiger reserves in India.</p>
+
+                    <p>Click the image below to reveal a fun fact:</p>
+                    <div class="image-container">
+                        <img src="tiger.jpg" alt="Tiger" class="clickable-image">
+                        <p class="fun-fact" style="display: none;">No two tigers have the same stripe pattern, making their stripes as unique as human fingerprints!</p>
+                    </div>
+
+                <p>Similarly, efforts to protect giant pandas in China have included the creation of specialized reserves 
+                    and breeding programs, helping to slowly stabilize their population. While these 
+                    efforts are encouraging, much work remains to address the threats posed by 
+                    deforestation, pollution, and climate change, ensuring Asia's unique ecological 
+                    heritage endures for future generations.</p>
+
+        </section>
     </div>
 </body>
 </html>
