--- a/home.html
+++ b/home.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="north-america.html">North America</a>
-        <a href="south-america.html">South America</a>
-        <a href="oceania.html">Oceania</a>
-        <a href="asia.html">Asia</a>
-        <a href="africa.html">Africa</a>
-        <a href="europe.html">Europe</a>
-        <a href="antarctica.html">Antarctica</a>
+        <a href="home.html">Home</a>
+        <a href="./northAmerica/northAmerica.html">North America</a>
+        <a href="./southAmerica/southAmerica.html">South America</a>
+        <a href="./oceania/oceania.html">Oceania</a>
+        <a href="./asia/asia.html">Asia</a>
+        <a href="./africa/africa.html">Africa</a>
+        <a href="./europe/europe.html">Europe</a>
+        <a href="./antarctica/antarctica.html">Antarctica</a>
     </nav>
     <div class="content">
         <h1>Continental Breakfast</h1>
