Working on nav bar

--- a/home.html
+++ b/home.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Continental Breakfast</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="Home Page">
+        <meta name="keywords" content="HTML, CSS, JavaScript">
+        <meta name="author" content="Austin Medina, Lauren Goodrich, Enka Hysaj, Maddie Carlson">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Continental Breakfast</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="north-america.html">North America</a>
-        <a href="south-america.html">South America</a>
-        <a href="oceania.html">Oceania</a>
-        <a href="asia.html">Asia</a>
-        <a href="africa.html">Africa</a>
-        <a href="europe.html">Europe</a>
-        <a href="antarctica.html">Antarctica</a>
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="northAmerica/northAmerica.html">North America</a></li>
+            <li><a href="southAmerica/southAmerica.html">South America</a></li>
+            <li><a href="oceania/oceania.html">Oceania</a></li>
+            <li><a href="asia/asia.html">Asia</a></li>
+            <li><a href="africa/africa.html">Africa</a></li>
+            <li><a href="europe/europe.html">Europe</a></li>
+            <li><a href="antarctica/antarctica.html">Antarctica</a></li>
+        </ul>
     </nav>
+       
     <div class="content">
         <h1>Continental Breakfast</h1>
         <p>Welcome to the Continental Breakfast homepage. Explore the continents through the navigation menu above.</p>
     </div>
+
+    <script src="home.js"></script>
 </body>
 </html>
