Working on nav bar

--- a/northAmerica/northAmerica.html
+++ b/northAmerica/northAmerica.html
@@ -8,22 +8,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>North America</title>
     <link rel="stylesheet" href="../style.css">
-    <script src="northAmerica.js" defer></script>
 </head>
 <body>
     <nav>
-        <a href="../home.html">Home</a>
-        <a href="/northAmerica/northAmerica.html">North America</a>
-        <a href="/southAmerica/southAmerica.html">South America</a>
-        <a href="/oceania/oceania.html">Oceania</a>
-        <a href="/asia/asia.html">Asia</a>
-        <a href="/africa/africa.html">Africa</a>
-        <a href="/europe/europe.html">Europe</a>
-        <a href="/antarctica/antarctica.html">Antarctica</a>
+        <ul>
+            <li><a href="../home.html">Home</a></li>
+            <li><a href="../northAmerica/northAmerica.html">North America</a></li>
+            <li><a href="../southAmerica/southAmerica.html">South America</a></li>
+            <li><a href="../oceania/oceania.html">Oceania</a></li>
+            <li><a href="../asia/asia.html">Asia</a></li>
+            <li><a href="../africa/africa.html">Africa</a></li>
+            <li><a href="../europe/europe.html">Europe</a></li>
+            <li><a href="../antarctica/antarctica.html">Antarctica</a></li>
+        </ul>
     </nav>
+    
     <div class="content">
         <h1>North America</h1>
-<<<<<<< HEAD
         <section class="geography">
             <h2>Geography</h2>
             <p>North America, the third-largest continent, spans from the Aleutian Islands in the northwest to the Isthmus of Panama in the south. It includes Greenland in the northeast and the islands of the Caribbean Sea and western North Atlantic. Its diverse physical geography comprises five major regions: the mountainous west, the Great Plains, the Canadian Shield, the varied eastern region, and the Caribbean. These regions contain nearly all the world’s biomes, from deserts and grasslands to tundras and coral reefs.</p>
@@ -150,7 +151,6 @@
                     beauty of North America.</p>
             
         </section>
-=======
         <div class="quizContainer">
             <p id="naScore"></p>
             <form id="quizNA">
@@ -286,7 +286,8 @@
                 </div>
             </form>
         </div>
->>>>>>> f60566a (Created quiz template for every continent)
     </div>
+
+    <script src="northAmerica.js"></script>
 </body>
 </html>
