--- a/oceania/oceania.html
+++ b/oceania/oceania.html
@@ -8,22 +8,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oceania</title>
     <link rel="stylesheet" href="../style.css">
-    <script src="oceania.js" defer></script>
 </head>
 <body>
     <nav>
-        <a href="../home.html">Home</a>
-        <a href="/northAmerica/northAmerica.html">North America</a>
-        <a href="/southAmerica/southAmerica.html">South America</a>
-        <a href="/oceania/oceania.html">Oceania</a>
-        <a href="/asia/asia.html">Asia</a>
-        <a href="/africa/africa.html">Africa</a>
-        <a href="/europe/europe.html">Europe</a>
-        <a href="/antarctica/antarctica.html">Antarctica</a>
-    </nav>
+        <ul>
+            <li><a href="../home.html">Home</a></li>
+            <li><a href="../northAmerica/northAmerica.html">North America</a></li>
+            <li><a href="../southAmerica/southAmerica.html">South America</a></li>
+            <li><a href="../oceania/oceania.html">Oceania</a></li>
+            <li><a href="../asia/asia.html">Asia</a></li>
+            <li><a href="../africa/africa.html">Africa</a></li>
+            <li><a href="../europe/europe.html">Europe</a></li>
+            <li><a href="../antarctica/antarctica.html">Antarctica</a></li>
+        </ul>
+    </nav>    
     <div class="content">
         <h1>Oceania</h1>
-<<<<<<< HEAD
         <section class="geography">
             <h2>Geography</h2>
             <p>Oceania, a region of thousands of islands in the Central and South Pacific, is dominated by Australia, Zealandia (New Zealand), and Papua New Guinea. It also includes three island groups: Melanesia, Micronesia, and Polynesia. Oceania’s islands are grouped into three types—continental islands, high islands, and low islands—each with unique geography and formation.</p>
@@ -115,7 +115,6 @@
                     Australia's unique ecological treasures are preserved for future generations.</p>
 
         </section>
-=======
         <div class="quizContainer">
             <p id="ocScore"></p>
             <form id="quizOC">
@@ -251,7 +250,8 @@
                 </div>
             </form>
         </div>
->>>>>>> f60566a (Created quiz template for every continent)
     </div>
+
+    <script src="oceania.js"></script>
 </body>
 </html>
