--- a/southAmerica/southAmerica.html
+++ b/southAmerica/southAmerica.html
@@ -12,15 +12,17 @@
 </head>
 <body>
     <nav>
-        <a href="../home.html">Home</a>
-        <a href="/northAmerica/northAmerica.html">North America</a>
-        <a href="/southAmerica/southAmerica.html">South America</a>
-        <a href="/oceania/oceania.html">Oceania</a>
-        <a href="/asia/asia.html">Asia</a>
-        <a href="/africa/africa.html">Africa</a>
-        <a href="/europe/europe.html">Europe</a>
-        <a href="/antarctica/antarctica.html">Antarctica</a>
-    </nav>
+        <ul>
+            <li><a href="../home.html">Home</a></li>
+            <li><a href="../northAmerica/northAmerica.html">North America</a></li>
+            <li><a href="../southAmerica/southAmerica.html">South America</a></li>
+            <li><a href="../oceania/oceania.html">Oceania</a></li>
+            <li><a href="../asia/asia.html">Asia</a></li>
+            <li><a href="../africa/africa.html">Africa</a></li>
+            <li><a href="../europe/europe.html">Europe</a></li>
+            <li><a href="../antarctica/antarctica.html">Antarctica</a></li>
+        </ul>
+    </nav>    
     <div class="content">
         <h1>South America</h1>
         <section class="geography">
@@ -245,6 +247,6 @@
         </div> 
     </div>
 
-    <script src="southAmericaQuiz.js"></script>
+    <script src="southAmerica.js"></script>
 </body>
 </html>
