--- a/africa/africa.html
+++ b/africa/africa.html
@@ -8,22 +8,25 @@
     <meta name="author" content="Austin Medina, Lauren Goodrich, Enka Hysaj, Maddie Carlson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="africaQuiz.js" defer></script>
+    <title>Africa</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <nav>
-        <a href="../home.html">Home</a>
-        <a href="/northAmerica/northAmerica.html">North America</a>
-        <a href="/southAmerica/southAmerica.html">South America</a>
-        <a href="/oceania/oceania.html">Oceania</a>
-        <a href="/asia/asia.html">Asia</a>
-        <a href="/africa/africa.html">Africa</a>
-        <a href="/europe/europe.html">Europe</a>
-        <a href="/antarctica/antarctica.html">Antarctica</a>
+        <ul>
+            <li><a href="../home.html">Home</a></li>
+            <li><a href="../northAmerica/northAmerica.html">North America</a></li>
+            <li><a href="../southAmerica/southAmerica.html">South America</a></li>
+            <li><a href="../oceania/oceania.html">Oceania</a></li>
+            <li><a href="../asia/asia.html">Asia</a></li>
+            <li><a href="../africa/africa.html">Africa</a></li>
+            <li><a href="../europe/europe.html">Europe</a></li>
+            <li><a href="../antarctica/antarctica.html">Antarctica</a></li>
+        </ul>
     </nav>
+    
     <div class="content">
         <h1>Africa</h1>
-<<<<<<< HEAD
         <section class="geography">
             <h2>Geography</h2>
             <p>Africa, the second-largest continent, is surrounded by the Mediterranean Sea, Red Sea, Indian Ocean, and Atlantic Ocean. The Equator divides it almost evenly. The continent is made up of eight major physical regions: the Sahara, Sahel, Ethiopian Highlands, savannas, Swahili Coast, rainforests, African Great Lakes, and Southern Africa, each hosting unique ecosystems.</p>
@@ -158,7 +161,6 @@
                         agricultural expansion and urban development, as well as poaching for ivory and bushmeat, 
                         continue to challenge the preservation of Africa's unique ecosystems.</p>
         </section>
-=======
 
         <div class="quizContainer">
             <p id="afScore"></p>
@@ -295,7 +297,8 @@
                 </div>
             </form>
         </div>
->>>>>>> f60566a (Created quiz template for every continent)
     </div>
+
+    <script src="africa.js"></script>
 </body>
 </html>
