--- a/antarctica/antarctica.html
+++ b/antarctica/antarctica.html
@@ -6,24 +6,25 @@
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Austin Medina, Lauren Goodrich, Enka Hysaj, Maddie Carlson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Antarctica</title>
+    <title>Africa</title>
     <link rel="stylesheet" href="../style.css">
-    <script src="antarcticaQuiz.js" defer></script>
 </head>
 <body>
     <nav>
-        <a href="../home.html">Home</a>
-        <a href="/northAmerica/northAmerica.html">North America</a>
-        <a href="/southAmerica/southAmerica.html">South America</a>
-        <a href="/oceania/oceania.html">Oceania</a>
-        <a href="/asia/asia.html">Asia</a>
-        <a href="/africa/africa.html">Africa</a>
-        <a href="/europe/europe.html">Europe</a>
-        <a href="/antarctica/antarctica.html">Antarctica</a>
+        <ul>
+            <li><a href="../home.html">Home</a></li>
+            <li><a href="../northAmerica/northAmerica.html">North America</a></li>
+            <li><a href="../southAmerica/southAmerica.html">South America</a></li>
+            <li><a href="../oceania/oceania.html">Oceania</a></li>
+            <li><a href="../asia/asia.html">Asia</a></li>
+            <li><a href="../africa/africa.html">Africa</a></li>
+            <li><a href="../europe/europe.html">Europe</a></li>
+            <li><a href="../antarctica/antarctica.html">Antarctica</a></li>
+        </ul>
     </nav>
+    
     <div class="content">
         <h1>Antarctica</h1>
-<<<<<<< HEAD
         <section class="geography">
             <h2>Geography</h2>
             <p>Antarctica, the southernmost continent, is a land of extremes. Known as the coldest, windiest, and driest place on Earth, it is the largest desert and a hub for scientific exploration. Completely covered in ice and surrounded by frigid oceans, Antarctica is home to unique geological features, rich research opportunities, and an unparalleled glimpse into Earth’s climatic history, all while remaining uninhabitable for permanent human settlement.</p>
@@ -129,7 +130,6 @@
                         and prohibits activities such as mineral exploitation. Continued international cooperation 
                         with this treaty is essential to keep safe this unique and critical region of the planet.</p>
         </section>
-=======
         <div class="quizContainer">
             <p id="antScore"></p>
             <form id="quizANT">
@@ -265,7 +265,8 @@
                 </div>
             </form>
         </div>
->>>>>>> f60566a (Created quiz template for every continent)
     </div>
+
+    <script src="antarcticaQuiz.js"></script>
 </body>
 </html>
