--- a/asia/asia.html
+++ b/asia/asia.html
@@ -8,22 +8,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asia</title>
     <link rel="stylesheet" href="../style.css">
-    <script src="asiaQuiz.js" defer></script>
 </head>
 <body>
     <nav>
-        <a href="../home.html">Home</a>
-        <a href="/northAmerica/northAmerica.html">North America</a>
-        <a href="/southAmerica/southAmerica.html">South America</a>
-        <a href="/oceania/oceania.html">Oceania</a>
-        <a href="/asia/asia.html">Asia</a>
-        <a href="/africa/africa.html">Africa</a>
-        <a href="/europe/europe.html">Europe</a>
-        <a href="/antarctica/antarctica.html">Antarctica</a>
+        <ul>
+            <li><a href="../home.html">Home</a></li>
+            <li><a href="../northAmerica/northAmerica.html">North America</a></li>
+            <li><a href="../southAmerica/southAmerica.html">South America</a></li>
+            <li><a href="../oceania/oceania.html">Oceania</a></li>
+            <li><a href="../asia/asia.html">Asia</a></li>
+            <li><a href="../africa/africa.html">Africa</a></li>
+            <li><a href="../europe/europe.html">Europe</a></li>
+            <li><a href="../antarctica/antarctica.html">Antarctica</a></li>
+        </ul>
     </nav>
+    
     <div class="content">
         <h1>Asia</h1>
-<<<<<<< HEAD
         <section class="geography">
             <h2>Geography</h2>
             <p>Asia, the largest continent, covers 30% of Earth’s land area and is home to 60% of the world’s population. It is characterized by a diverse landscape divided into five major physical regions: mountain systems, plateaus, plains and deserts, freshwater environments, and saltwater environments. Each region shapes the continent's unique geography, culture, and ecosystems, making Asia a key player in global history and ecological significance.</p>
@@ -136,7 +137,6 @@
                     heritage endures for future generations.</p>
 
         </section>
-=======
         <div class="quizContainer">
             <p id="asScore"></p>
             <form id="quizAS">
@@ -272,7 +272,8 @@
                 </div>
             </form>
         </div>
->>>>>>> f60566a (Created quiz template for every continent)
     </div>
+
+    <script src="asia.js"></script>
 </body>
 </html>
