--- a/europe/europe.html
+++ b/europe/europe.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="description" content="Europe Information">
     <meta name="keywords" content="HTML, CSS, JavaScript">
-<<<<<<< HEAD
     <meta name="author" content="Austin Medina, Lauren Goodrich, Enka Hysaj, Maddie Carlson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Europe</title>
@@ -117,27 +116,7 @@
                         continent's unique ecological heritage.</p>
         
         </section>
-=======
-    <meta name="author" content="Austin Medina, Lauren Goodrich, Enka Hysaj, Maddie Carlson">>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Africa</title>
-    <style>
-        
-    </style>
-</head>
-<body>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="north-america.html">North America</a>
-        <a href="south-america.html">South America</a>
-        <a href="oceania.html">Oceania</a>
-        <a href="asia.html">Asia</a>
-        <a href="africa.html">Africa</a>
-        <a href="europe.html">Europe</a>
-        <a href="antarctica.html">Antarctica</a>
-    </nav>
-    <div class="content">
-        <h1>Europe</h1>
+
 
         <div class="quizContainer">
             <p id="euScore"></p>
@@ -274,7 +253,8 @@
                 </div>
             </form>
         </div>
->>>>>>> f60566a (Created quiz template for every continent)
     </div>
+
+    <script src="europe.js"></script>
 </body>
 </html>
